// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PieChart renders correctly with active prop 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    active={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
          fill="black"
        />
        <path
          d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
          fill="yellowLight"
        />
        <path
          d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
          fill="black"
        />
      </g>,
      "height": 20,
      "viewBox": "0 0 24 24",
      "width": 20,
      "xmlns": "http://www.w3.org/2000/svg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />,
          <path
            d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="black"
          />,
          <path
            d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="yellowLight"
          />,
          <path
            d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
            fill="black"
          />,
        ],
        "fill": "none",
        "fillRule": "evenodd",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M0 0h24v24H0z",
            "fill": "none",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
            "fill": "black",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
            "fill": "yellowLight",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z",
            "fill": "black",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "g",
    },
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="black"
          />
          <path
            d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="yellowLight"
          />
          <path
            d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
            fill="black"
          />
        </g>,
        "height": 20,
        "viewBox": "0 0 24 24",
        "width": 20,
        "xmlns": "http://www.w3.org/2000/svg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />,
            <path
              d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
              fill="black"
            />,
            <path
              d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
              fill="yellowLight"
            />,
            <path
              d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
              fill="black"
            />,
          ],
          "fill": "none",
          "fillRule": "evenodd",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M0 0h24v24H0z",
              "fill": "none",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
              "fill": "black",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
              "fill": "yellowLight",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z",
              "fill": "black",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "g",
      },
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`PieChart renders correctly without props 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
          fill="black"
        />
        <path
          d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
          fill="dark"
        />
        <path
          d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
          fill="black"
        />
      </g>,
      "height": 20,
      "viewBox": "0 0 24 24",
      "width": 20,
      "xmlns": "http://www.w3.org/2000/svg",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />,
          <path
            d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="black"
          />,
          <path
            d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="dark"
          />,
          <path
            d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
            fill="black"
          />,
        ],
        "fill": "none",
        "fillRule": "evenodd",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M0 0h24v24H0z",
            "fill": "none",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
            "fill": "black",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
            "fill": "dark",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "d": "M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z",
            "fill": "black",
          },
          "ref": null,
          "rendered": null,
          "type": "path",
        },
      ],
      "type": "g",
    },
    "type": "svg",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="black"
          />
          <path
            d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
            fill="dark"
          />
          <path
            d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
            fill="black"
          />
        </g>,
        "height": 20,
        "viewBox": "0 0 24 24",
        "width": 20,
        "xmlns": "http://www.w3.org/2000/svg",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />,
            <path
              d="M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
              fill="black"
            />,
            <path
              d="M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z"
              fill="dark"
            />,
            <path
              d="M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z"
              fill="black"
            />,
          ],
          "fill": "none",
          "fillRule": "evenodd",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M0 0h24v24H0z",
              "fill": "none",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M20.019 3.99C18.343 2.354 16 2.178 15.071 2.178h-.476c-.738.065-1.303.671-1.3 1.395v5.581c0 .771.64 1.396 1.429 1.396h5.714c.79 0 1.429-.625 1.429-1.396 0-.334-.053-3.409-1.848-5.162zm-5.295 5.173V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
              "fill": "black",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M14.724 9.163V3.58h.347c.767 0 2.643.14 3.939 1.396 1.428 1.395 1.428 4.186 1.428 4.186h-5.714z",
              "fill": "dark",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "d": "M18.533 11.488h-6.19V5.442c0-.77-.64-1.395-1.429-1.395-4.728 0-8.571 3.883-8.571 8.837 0 4.795 3.662 8.837 8.571 8.837 4.968-.068 8.979-3.985 9.048-8.837 0-.77-.64-1.396-1.429-1.396zm-7.619 8.838c-4.128 0-7.143-3.41-7.143-7.442 0-4.033 3.015-7.442 7.143-7.442v7.442h7.62c-.057 4.087-3.435 7.387-7.62 7.442z",
              "fill": "black",
            },
            "ref": null,
            "rendered": null,
            "type": "path",
          },
        ],
        "type": "g",
      },
      "type": "svg",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
